ghc-4335c07/testsuite/tests/indexed-types/should_fail/T10899.hs
{-# LANGUAGE TypeFamilies, RankNTypes #-}

module T10899 where

class C a where
  type F a
  type F a = forall m. m a
