ghc-4335c07/testsuite/tests/indexed-types/should_fail/T10899.stderr

T10899.hs:7:3: error:
    • Illegal polymorphic type: forall (m :: * -> *). m a
    • In the class declaration for ‘C’
